tests/resource/valid/error/handle_only_id.mamba
class MyErr1: Exception("Something went wrong")
class MyErr2(msg: Str): Exception(msg)

def f(x: Int) -> Int raise [MyErr1, MyErr2] => x

def a := f(10) handle
    _ : MyErr1 =>
        print("Something went wrong")
        -1
    _: MyErr2 =>
        print("Something else went wrong")
        -2
